k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: 3dpartner
  labels:
    app.kubernetes.io/name: 3dpartner
